[package]
name = "todo-term"
description = "Todo app in term using Rust Lang"
version = "0.1.0"
edition = "2021"
authors = [ "Yoel Valverde <yoelvp73@gmail.com>"]
keywords = ["Todo app", "Todo term"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
